// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

package user;

option go_package = "github.com/gogf/gf-demo-grpc/api/user/v1";

import "pbentity/user_main.proto";

service User{
  rpc Create(CreateReq) returns (CreateRes) {}
  rpc Update(UpdateReq) returns (UpdateRes) {}
  rpc GetOne(GetOneReq) returns (GetOneRes) {}
  rpc GetList(GetListReq) returns (GetListRes) {}
  rpc Delete(DeleteReq) returns (DeleteRes) {}
}

message CreateReq {
  string Username = 1; // v: required|length: 1,20
  string Password = 2; // v: required|length: 8,30
  string Phone = 3; // v: required|phone
}

message CreateRes {
  uint64 id = 1;
}

message UpdateReq {
  uint64 id = 1; // v: required
  string Password = 2; // v: required|length: 8,30
  string Phone = 3; // v: required|phone
}

message UpdateRes {
  uint64 id = 1;
}

message GetOneReq {
  uint64 id = 1; // v: required
}

message GetOneRes {
  pbentity.UserMain user = 1;
}

message GetListReq {
  uint64 page = 1; // v: required
  uint64 pageSize = 2; // v: required|max: 100
}

message GetListRes {
  repeated pbentity.UserMain users = 1;
}

message DeleteReq {
  uint64 id = 1; // v: required
}

message DeleteRes {
  uint64 id = 1;
}